--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Muli:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Jost:400,600|Raleway&display=swap');
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: 'Raleway';
 }
 
 * {
-    font-family: 'Muli', sans-serif;
-    font-weight: 300;
-    box-sizing: border-box;
+	font-weight: 300;
+	box-sizing: border-box;
 }
