--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Jost:400,600|Raleway&display=swap');
 
+html {
+	height: 100vh;
+}
+
 body {
+	height: 100vh;
 	margin: 0;
 	padding: 0;
 	font-family: 'Raleway';
